--- a/Detector.tex
+++ b/Detector.tex
@@ -189,7 +189,7 @@ In the two trigger stages, various different conditions can be tested in paralle
 
 \section{LHC Operation and Data Taking}
 \label{sec:data}
-The first operation of the LHC took place in September 2008. After a major cooling incident only a few days later requiring a longer technical stop, beams were circulated again in November 2009. The first collisions at a center of mass energy of 7\tev finally happened end of March 2010~\cite{bib:lhcmachineoutreach}. 
+The first operation of the LHC took place in September 2008. After a major cooling incident only a few days later requiring a longer technical stop, beams were circulated again in November 2009. The first collisions at a center of mass energy of 7\tev finally happened end of March 2010. 
 \begin{figure}[!t]
   \centering
   \begin{tabular}{c}
