--- a/RA2.tex
+++ b/RA2.tex
@@ -215,7 +215,7 @@ In this section, those data-based background estimation methods are described. F
   \caption{The simulated ratio $R_{Z/\gamma}$ as a function of (a) \MHT, (b) \HT, (c) \NJets, where the values for three \MHT selections are shown with linear fits, and (d) the double ratio of $R_{Z(\mu\mu)/\gamma}$, using events from data to those from simulation; the linear fit and its uncertainty band are overlaid~\cite{Chatrchyan:2014lfa}.}
   \label{fig:ra2_zinv}
 \end{figure}
-The irreducible background contributions arising from \ZInvJets events are estimated using \photonJets events. This is a well suited method as for high transverse momenta of the vector boson the event kinematics are the same and the cross sections differ mainly according to the different boson-quark couplings~\cite{Ask:2011xf, Bern:2012vx}. \\
+The irreducible background contributions arising from \ZInvJets events are estimated using \photonJets events. This is a well suited method as for high transverse momenta of the vector boson the event kinematics are the same and the cross sections differ mainly according to the different boson-quark couplings~\cite{Ask:2011xf, Bern:2011pa, Bern:2012vx}. \\
 The \photonJets sample is collected by triggering on a $\photon$ candidate and large values of \HT. Photon candidates are selected, if they satisfy \pt$ > 100$\gev and $|\eta| < 1.44$ or $1.566 < |\eta| < 2.5$. Furthermore, they have to have a shower profile consistent with that of a prompt photon produced directly in the hard interaction. In order to distinguish photons from misidentified electrons they must not have an associated track in the pixel detector. In addition, photon candidates are required to be isolated meaning that in a cone of radius $\Delta R = 0.3$ the summed transverse momenta of PF candidates around the momentum direction of the photon candidate are not allowed to exceed a certain value. The number of selected \photonJets events is corrected for photon acceptance, reconstruction and isolation efficiency. Furthermore, the purity of the \photonJets sample, which is the fraction of selected photon candidates emerging from direct production, has to be taken into account. The number of background photons caused for instance by misidentified jet fragments, is estimated by exploiting the difference between the shower profile of prompt and background photons. The average purity of the \photonJets sample is measured to be 93\%. Subsequently, the number of \ZInvJets events in data $N_{\ZInvJets}^{\text{data}} (\HT, \MHT, \NJets)$ using the number of selected \photonJets events $N_{\photonJets}^{\text{data}} (\HT,\MHT,\NJets)$ is obtained according to
 \begin{equation*}
 N_{\ZInvJets}^{\text{data}} (\HT, \MHT, \NJets) = R^{\text{MC}}_{Z(\nu\bar{\nu})/\gamma} (\HT,\MHT,\NJets)
@@ -225,7 +225,7 @@ N_{\ZInvJets}^{\text{data}} (\HT, \MHT, \NJets) = R^{\text{MC}}_{Z(\nu\bar{\nu})
                                                        \frac{R_{Z(\mu\mu)/\gamma}^{\text{data}}}{R_{Z(\mu\mu)/\gamma}^{\text{MC}}}
 \label{eqn:photoncorr}
 \end{equation*}
-with the ratio relating the production cross section of \ZInvJets and \photonJets events $R^{\text{MC}}_{Z(\nu\bar{\nu})/\gamma} (\HT,\MHT,\NJets)$ determined in simulation and the double ratio $\frac{R_{Z(\mu\mu)/\gamma}^{\text{data}}}{R_{Z(\mu\mu)/\gamma}^{\text{MC}}}$ selected in data and MC to account for theoretical uncertainties on $R_{Z/\gamma}$ especially for high jet multiplicities~\cite{Bern:2012vx, Bern:2011pa}. The missing momentum in the event is emulated by ignoring the momentum of the photon candidate in the calculation of \MHT. \\
+with the ratio relating the production cross section of \ZInvJets and \photonJets events $R^{\text{MC}}_{Z(\nu\bar{\nu})/\gamma} (\HT,\MHT,\NJets)$ determined in simulation and the double ratio $\frac{R_{Z(\mu\mu)/\gamma}^{\text{data}}}{R_{Z(\mu\mu)/\gamma}^{\text{MC}}}$ selected in data and MC to account for theoretical uncertainties on $R_{Z/\gamma}$ especially for high jet multiplicities~\cite{Bern:2011pa, Bern:2012vx}. The missing momentum in the event is emulated by ignoring the momentum of the photon candidate in the calculation of \MHT. \\
 The behaviour of $R_{Z/\gamma}$ is examined in simulated events as a function of \MHT, \HT and \NJets. The obtained distributions are shown in Fig.~\ref{fig:ra2_zinv}\,(a) -- (c). While a strong dependence on \MHT for small values ($\lesssim 500$\gev) is observed, the variation as function of \HT amounts to only $(12 \pm 5)\%$ in the relevant range for this analysis of $500 < \HT < 1500$\gev. The ratio as a function of the jet multiplicity is determined for different \MHT ranges, which are $200 < \MHT < 300$\gev, $300 < \MHT < 450$\gev and $\MHT > 450$\gev. The behaviour in each of these \MHT ranges is described by a linear function also displayed in Fig.~\ref{fig:ra2_zinv}\,(c). It is found that the ratio decreases slightly with increasing jet multiplicity which is consistent with findings from theory~\cite{Bern:2012vx, Bern:2011pa}. In order to take the theoretical uncertainty on $R_{Z/\gamma}$ obtained from simulated events into account, differences of this phenomenological ratio in data and simulated events are studied using $Z(\mu\mu)$ events. The double ratio of $R_{Z(\mu\mu)/\gamma}^{\text{data}}$ to $R_{Z(\mu\mu)/\gamma}^{\text{MC}}$ is derived as a function of the jet multiplicity and shown in Fig.~\ref{eqn:photoncorr}\,(d). It is fitted with a linear function, and the deviation from unity is considered as correction for the $R_{Z/\gamma}$ ratio in each jet multiplicity selection. \\
 The main sources of uncertainty for the prediction of \ZInvJets events arise from the fit uncertainty to the double ratio which is at the order of 20\%, 25\% and 45\% for the different jet multiplicity intervals, the differences between data and simulation regarding the photon identification and isolation as well as the subtraction of background photons from QCD multijet events.
 
@@ -743,7 +743,7 @@ in case of light-flavour squarks and
 \item (d) $\tilde{g} \rightarrow q\bar{q} + \tilde{\chi}_1^{\pm}/\tilde{\chi}_2^0 \;\; \mathrm{where} \;\; \tilde{\chi}_1^{\pm} \rightarrow W + \tilde{\chi}_1^0, \; \tilde{\chi}_2^0 \rightarrow Z + \tilde{\chi}_1^0 \;\; \mathrm{and} \;\; m_{\tilde{\chi}_1^{\pm}/\tilde{\chi}_2^0} = 0.5(m_{{\tilde{\chi}^0_1}} + m_{\tilde{g}})$ 
 \end{description}  
 for decays of the gluino. The branching ratios are assumed to be 100\% for the different decay modes, except for case (d) where the decay via $\tilde{\chi}_1^{+}$, $\tilde{\chi}_1^{-}$ and $\tilde{\chi}_2^0$ is considered with equal probabilities. \\
-Exclusion limits are derived with the modified $\mathrm{CL_s}$~\cite{0954-3899-28-10-313, Thomas1999435, bib:Higgs:CLS} approach and denote the 95\% confidence level (CL) upper limit on the production cross section of the signal. The profile likelihood ratio is used as test statistics which is derived from the combined likelihood calculated for all 36 search regions considering the uncertainties of the acceptance, efficiencies and uncertainties for the signal as well as the background predictions. The uncertainties considered for the signal acceptance and efficiency in the limit setting procedure are: 
+Exclusion limits are derived with the modified $\mathrm{CL_s}$~\cite{0954-3899-28-10-313, Thomas1999435, bib:Higgs:CLS} approach and denote the 95\% confidence level (CL) upper limit on the production cross section of the signal. The profile likelihood ratio is used as test statistics which is derived from the combined likelihood calculated for all 36 search regions considering the uncertainties of the acceptance, efficiencies and uncertainties for the signal as well as the background predictions. The 36 search regions are assumed to be uncorrelated for all backgrounds except for QCD where they are assumed to be fully correlated. Furthermore, the statistical uncertainty of the control sample for the lost-lepton and hadronic-tau background is assumed to be fully correlated. The uncertainties considered for the signal acceptance and efficiency in the limit setting procedure are:  
 \begin{itemize} 
 \item 2.6\% uncertainty on the integrated luminosity~\cite{CMS-PAS-LUM-13-001}
 \item 2\% uncertainty for a possible trigger inefficiency (cf. Sec.~\ref{subsec:RA2_samples_trigger})
@@ -788,7 +788,7 @@ Furthermore, studies using the $\sqrt{s} = 8$\tev data targeting the same simpli
 This comparison exhibits that the expected sensitivity to the models $\tilde{g} \rightarrow q\bar{q} + \tilde{\chi}_1^0$ and $\tilde{q} \rightarrow q + \tilde{\chi}_1^0$ is similar for the different analyses. This is not unexpected as the compared analyses all make use of the all-hadronic final state. However, the analysis published in~\cite{CMS-PAS-SUS-13-019} performs better especially in case of squark production, as here also search regions based on dijet events are employed. \\
 Concerning gluino-mediated stop production it is interesting to note that the analysis presented in this thesis is also similarly sensitive to this model as other all-hadronic searches (\cf SUS-12-028, SUS-12-024 or SUS-13-019). These other hadronic analyses typically employ b-tagging information while the analysis presented in this thesis followed a complementary approach by employing high jet multiplicity search regions. However, the best sensitivity to this respective model is achieved by an analysis which is based on a single lepton, multiple jets and b-tags (SUS-13-007). 
 \\
-Comparable analyses have also been performed by the ATLAS experiment~\cite{Aad:2014wea, Aad:2013wta, Aad:2014lra} and the obtained exclusion limits on sparticle masses lie in a very similar mass region.
+Comparable analyses have also been performed by the ATLAS experiment~\cite{Aad:2013wta, Aad:2014wea, Aad:2014lra} and the obtained exclusion limits on sparticle masses lie in a very similar mass region.
 
 \section{Status of supersymmetry after LHC Run I}
 \label{sec:susy_status}
