--- a/Thesis.bib
+++ b/Thesis.bib
@@ -873,7 +873,7 @@ to 10\fbinv of Data",
 }
 
 @Article{Aliev:2010zk,
-     author    = "Aliev, M. and others",
+     author    = "Aliev, M. and Lacker, H. and Langenfeld, U. and others",
      title     = "{HATHOR -- HAdronic Top and Heavy quarks crOss section calculatoR}",
      journal   = "Comput. Phys. Commun.",
      volume    = "182",
@@ -1926,6 +1926,7 @@ SLACcitation = "%%CITATION = ARXIV:1302.3415;%%",
                         and Dreiner, Herbi and Hamer, Matthias and others",
       title          = "{Constrained Supersymmetry after two years of LHC data: a
                         global view with Fittino}",
+      journal        = "",
       year           = "2012",
       eprint         = "1204.4199",
       archivePrefix  = "arXiv",
@@ -2615,17 +2616,19 @@ primaryClass   = "hep-ph"
   year = {2014}
 }
 
-@misc{DRathjens,
+@article{DRathjens,
   author = "D.~Rathjens",
   title = "",
+  journal = "",
   note = "PhD thesis in preparation, University of Hamburg",
   year = {2014}
 }
 
-@misc{MSeidel,
+@article{MSeidel,
   author = "M.~Seidel",
-  title = "PhD thesis in preparation",
-  note = "University of Hamburg",
+  title = "",
+  journal = "",
+  note = "PhD thesis in preparation, University of Hamburg",
   year = {2014}
 }
 
@@ -2655,14 +2658,14 @@ primaryClass   = "hep-ph"
   year          = {2011}
 }
 
-@techreport{CMS-PAS-TOP-14-001,
-      title         = "{Measurement of the top-quark mass in t t-bar events with
-                       lepton+jets final states in $pp$ collisions at sqrt(s)=8
-                       TeV}",
+@article{CMS-PAS-TOP-14-001,
+      title         = "{Measurement of the top-quark mass in $t \bar{t}$ events with
+                       lepton+jets final states in $pp$ collisions at $\sqrt{s} = 8$ TeV}",
       institution   = "CERN",
+      journal       = "",
       collaboration = "CMS",
       address       = "Geneva",
-      number        = "CMS-PAS-TOP-14-001",
+      volume       = "\href{http://cdsweb.cern.ch/record/1690093}{CMS-PAS-TOP-14-001}",
       year          = "2014",
 }
 
@@ -2670,8 +2673,8 @@ primaryClass   = "hep-ph"
       author         = "Abazov, Victor Mukhamedovich and others",
       title          = "{Precision measurement of the top-quark mass in
                         lepton+jets final states}",
-      collaboration  = "D0",
-      journal        = "Phys.Rev.Lett.",
+      collaboration  = "D\O{}",
+      journal        = "Phys. Rev. Lett.",
       volume         = "113",
       pages          = "032002",
       doi            = "10.1103/PhysRevLett.113.032002",
@@ -2795,7 +2798,7 @@ url = "http://www.sciencedirect.com/science/article/pii/S0370269311008719",
   author = "W. J.~Stirling",
   title = "Parton luminosity and cross section plots",
   note = "\url{http://www.hep.ph.ic.ac.uk/~wstirlin/plots/plots.html}",
-  year = {retrieved from Nov. 2014}
+  year = {Retrieved Nov. 2014}
 }
 
 @inproceedings{Huth:217490,
@@ -3326,7 +3329,7 @@ author = "Matteo Cacciari and Gavin P. Salam"
       author         = "James, F. and Roos, M.",
       title          = "{Minuit: A System for Function Minimization and Analysis
                         of the Parameter Errors and Correlations}",
-      journal        = "Comput.Phys.Commun.",
+      journal        = "Comput. Phys. Commun.",
       volume         = "10",
       pages          = "343-367",
       doi            = "10.1016/0010-4655(75)90039-9",
@@ -3341,7 +3344,7 @@ author = "Matteo Cacciari and Gavin P. Salam"
                         Secondary Vertex Reconstruction at $\sqrt{s}=7$ TeV}",
       collaboration  = "CMS",
       journal        = "JHEP",
-      volume         = "1103",
+      volume         = "03",
       pages          = "136",
       doi            = "10.1007/JHEP03(2011)136",
       year           = "2011",
@@ -3395,8 +3398,8 @@ author = "Matteo Cacciari and Gavin P. Salam"
                         and b-quark multiplicity in pp collisions at $\sqrt s=8$
                         TeV}",
       collaboration  = "CMS",
-      journal        = "Eur.Phys.J.",
-      volume         = "C73",
+      journal        = "Eur. Phys. J. C",
+      volume         = "73",
       pages          = "2568",
       doi            = "10.1140/epjc/s10052-013-2568-6",
       year           = "2013",
@@ -3413,8 +3416,8 @@ author = "Matteo Cacciari and Gavin P. Salam"
                         production in multijet final states in $pp$ collisions at 8
                         TeV}",
       collaboration  = "CMS",
-      journal        = "Phys.Lett.",
-      volume         = "B725",
+      journal        = "Phys. Lett. B",
+      volume         = "725",
       pages          = "243-270",
       doi            = "10.1016/j.physletb.2013.06.058",
       year           = "2013",
@@ -3428,7 +3431,7 @@ author = "Matteo Cacciari and Gavin P. Salam"
 @article{CMS-PAS-SUS-13-019,
   collaboration = {CMS},
   title         = {Search for supersymmetry in hadronic final states using
-                  MT2 with the CMS detector at sqrt(s) = 8 TeV},
+                  $\mathrm{M_{T2}}$ with the CMS detector at $\sqrt{s} = 8$ TeV},
   JOURNAL      = "CMS Physics Analysis Summary",
   volume       = "\href{http://cdsweb.cern.ch/record/1646394}{CMS-PAS-SUS-13-019}",
   YEAR         = "2014"
@@ -3436,9 +3439,9 @@ author = "Matteo Cacciari and Gavin P. Salam"
 
 @article{Cheng:2008hk,
       author         = "Cheng, Hsin-Chia and Han, Zhenyu",
-      title          = "{Minimal Kinematic Constraints and m(T2)}",
+      title          = "{Minimal Kinematic Constraints and $\mathrm{M_{T2}}$}",
       journal        = "JHEP",
-      volume         = "0812",
+      volume         = "12",
       pages          = "063",
       doi            = "10.1088/1126-6708/2008/12/063",
       year           = "2008",
@@ -3505,11 +3508,11 @@ author = "Matteo Cacciari and Gavin P. Salam"
       author         = "Aad, Georges and others",
       title          = "{Search for new phenomena in final states with large jet
                         multiplicities and missing transverse momentum at
-                        sqrt(s)=8 TeV proton-proton collisions using the ATLAS
+                        $\sqrt{s} = 8$ TeV proton-proton collisions using the ATLAS
                         experiment}",
       collaboration  = "ATLAS",
       journal        = "JHEP",
-      volume         = "1310",
+      volume         = "10",
       pages          = "130",
       doi            = "10.1007/JHEP10(2013)130",
       year           = "2013",
@@ -3528,7 +3531,7 @@ author = "Matteo Cacciari and Gavin P. Salam"
                         collisions with the ATLAS detector}",
       collaboration  = "ATLAS",
       journal        = "JHEP",
-      volume         = "1410",
+      volume         = "10",
       pages          = "24",
       doi            = "10.1007/JHEP10(2014)024",
       year           = "2014",
@@ -3546,7 +3549,7 @@ author = "Matteo Cacciari and Gavin P. Salam"
                         using $\sqrt{s}=8$ TeV proton--proton collision data}",
       collaboration  = "ATLAS",
       journal        = "JHEP",
-      volume         = "1409",
+      volume         = "09",
       pages          = "176",
       doi            = "10.1007/JHEP09(2014)176",
       year           = "2014",
@@ -3572,14 +3575,14 @@ author = "Matteo Cacciari and Gavin P. Salam"
   pages = {221803}
 }
 
-@article{Ask:2011xf,
+@article{Ask:2011xf, 
       author         = "Ask, S. and Parker, M.A. and Sandoval, T. and Shea, M.E.
                         and Stirling, W.J.",
-      title          = "{Using gamma+jets Production to Calibrate the Standard
-                        Model Z(nunu)+jets Background to New Physics Processes at
+      title          = "{Using $\gamma$ + jets Production to Calibrate the Standard
+                        Model $Z(\rightarrow\nu \bar{\nu})$ + jets Background to New Physics Processes at
                         the LHC}",
       journal        = "JHEP",
-      volume         = "1110",
+      volume         = "10",
       pages          = "058",
       doi            = "10.1007/JHEP10(2011)058",
       year           = "2011",
@@ -3594,9 +3597,8 @@ author = "Matteo Cacciari and Gavin P. Salam"
       author         = "Bern, Z.a and Diana, G. and Dixon, L.J. and Febres
                         Cordero, F. and Hoeche, S. and others",
       title          = "{Missing Energy and Jets for Supersymmetry Searches}",
-      journal        = "Phys.Rev.",
-      number         = "3",
-      volume         = "D87",
+      journal        = "Phys. Rev. D",
+      volume         = "87",
       pages          = "034026",
       doi            = "10.1103/PhysRevD.87.034026",
       year           = "2013",
@@ -3612,8 +3614,8 @@ author = "Matteo Cacciari and Gavin P. Salam"
       author         = "Bern, Z. and Diana, G. and Dixon, L.J. and Febres
                         Cordero, F. and Hoche, S. and others",
       title          = "{Driving Missing Data at Next-to-Leading Order}",
-      journal        = "Phys.Rev.",
-      volume         = "D84",
+      journal        = "Phys. Rev. D",
+      volume         = "84",
       pages          = "114002",
       doi            = "10.1103/PhysRevD.84.114002",
       year           = "2011",
@@ -3639,8 +3641,8 @@ author = "Matteo Cacciari and Gavin P. Salam"
   number = 38,
   pagetotal = {VII, 91},
   ppn_gvk = {017474957},
-  publisher = {Society for Industrial and applied mathematics},
-  series = {Regional Conference Series in applied mathematics},
+  publisher = {Society for Industrial and Applied Mathematics},
+  series = {Regional Conference Series in Applied Mathematics},
   timestamp = {2009-08-21T09:46:50.000+0200},
   title = {The Jackknife, the bootstrap and other resampling plans},
   url = {http://gso.gbv.de/DB=2.1/CMD?ACT=SRCHA&SRT=YOP&IKT=1016&TRM=ppn+017474957&sourceid=fbw_bibsonomy},
@@ -3660,8 +3662,8 @@ author = "Matteo Cacciari and Gavin P. Salam"
      author    = "Lester, C. G. and Summers, D. J.",
      title     = "{Measuring masses of semi-invisibly decaying particles pair
                   produced at hadron colliders}",
-     journal   = "Phys. Lett.",
-     volume    = "B 463",
+     journal   = "Phys. Lett. B",
+     volume    = "463",
      year      = "1999",
      pages     = "99-103",
      eprint    = "hep-ph/9906349",
@@ -3672,8 +3674,8 @@ author = "Matteo Cacciari and Gavin P. Salam"
 
 @Article{Barr:2003rg,
      author    = "Barr, Alan and Lester, Christopher and Stephens, P.",
-     title     = "{$m_{T2}$: the Truth behind the glamour}",
-     journal   = "J. Phys. G",
+     title     = "{$\mathrm{M_{T2}}$: The truth behind the glamour}",
+     journal   = "J.~Phys.~G",
      volume    = "29",
      year      = "2003",
      pages     = "2343-2363",
@@ -3685,7 +3687,7 @@ author = "Matteo Cacciari and Gavin P. Salam"
 
 @article{CMS-PAS-SUS-12-002,
  collaboration = {CMS},
-      title    = "Search for Supersymmetry in hadronic final states using  $M_{\text{T}2}$ with the CMS detector at \mbox{$\sqrt{s} = 7\tev$}",
+      title    = "Search for Supersymmetry in hadronic final states using  $\mathrm{M_{T2}}$ with the CMS detector at \mbox{$\sqrt{s} = 7\tev$}",
  JOURNAL      = "CMS Physics Analysis Summary",
  volume       = "\href{https://cdsweb.cern.ch/record/1444892}{CMS-PAS-SUS-12-002}",
  year         = "2012",
@@ -3806,6 +3808,7 @@ author = "Matteo Cacciari and Gavin P. Salam"
 @article{Botje:2011sn,
       author         = "Michiel Botje and Jon Butterworth and Amanda Cooper-Sarkar and Albert de Roeck and Joel Feltesse and Stefano Forte and Alexander Glazov and Joey Huston and Ronan McNulty and Torbj{\"o}rn Sj{\"o}strand and Robert Thorne",
       title          = "{The PDF4LHC Working Group Interim Recommendations}",
+      journal        = "",
       year           = "2011",
       eprint         = "1101.0538",
       archivePrefix  = "arXiv",
@@ -3833,8 +3836,8 @@ author = "Matteo Cacciari and Gavin P. Salam"
       author         = "Martin, A.D. and Stirling, W.J. and Thorne, R.S. and
                         Watt, G.",
       title          = "{Parton distributions for the LHC}",
-      journal        = "Eur.Phys.J.",
-      volume         = "C63",
+      journal        = "Eur. Phys. J. C",
+      volume         = "63",
       pages          = "189-285",
       doi            = "10.1140/epjc/s10052-009-1072-5",
       year           = "2009",
@@ -3895,7 +3898,7 @@ author = "Matteo Cacciari and Gavin P. Salam"
                         collisions at $\sqrt{s}$= 8 TeV}",
       collaboration  = "CMS",
       journal        = "JHEP",
-      volume         = "1406",
+      volume         = "06",
       pages          = "055",
       doi            = "10.1007/JHEP06(2014)055",
       year           = "2014",
@@ -3958,11 +3961,11 @@ author = "Matteo Cacciari and Gavin P. Salam"
 @article{Chatrchyan:2012wa,
       author         = "Chatrchyan, Serguei and others",
       title          = "{Search for supersymmetry in final states with missing
-                        transverse energy and 0, 1, 2, or at least 3 b-quark jets
-                        in 7 TeV $pp$ collisions using the variable alphaT}",
+                        transverse energy and 0, 1, 2, or $\ge$ 3 b-quark jets
+                        in 7 TeV $pp$ collisions using the variable $\alpha_T$}",
       collaboration  = "CMS",
       journal        = "JHEP",
-      volume         = "1301",
+      volume         = "01",
       pages          = "077",
       doi            = "10.1007/JHEP01(2013)077",
       year           = "2013",
@@ -3973,13 +3976,13 @@ author = "Matteo Cacciari and Gavin P. Salam"
       SLACcitation   = "%%CITATION = ARXIV:1210.8115;%%",
 }
 
-@article{Chatrchyan:2012jx,
+@article{Chatrchyan:2012jx, 
       author         = "Chatrchyan, Serguei and others",
       title          = "{Search for supersymmetry in hadronic final states using
-                        MT2 in $pp$ collisions at $\sqrt{s} = 7$ TeV}",
+                        $\mathrm{M_{T2}}$ in $pp$ collisions at $\sqrt{s} = 7$ TeV}",
       collaboration  = "CMS",
       journal        = "JHEP",
-      volume         = "1210",
+      volume         = "10",
       pages          = "018",
       doi            = "10.1007/JHEP10(2012)018",
       year           = "2012",
@@ -3995,7 +3998,7 @@ author = "Matteo Cacciari and Gavin P. Salam"
       title          = "{Inclusive search for supersymmetry using the razor
                         variables in $pp$ collisions at $\sqrt{s}=7$ TeV}",
       collaboration  = "CMS",
-      journal        = "Phys.Rev.Lett.",
+      journal        = "Phys. Rev. Lett.",
       number         = "8",
       volume         = "111",
       pages          = "081802",
@@ -4010,8 +4013,9 @@ author = "Matteo Cacciari and Gavin P. Salam"
 
 @article{Chatrchyan:2014goa,
       author         = "Chatrchyan, Serguei and others",
-      title          = "{Search for supersymmetry with razor variables in pp
+      title          = "{Search for supersymmetry with razor variables in $pp$
                         collisions at $\sqrt{s}$=7 TeV}",
+      journal        = "",
       collaboration  = "CMS",
       year           = "2014",
       eprint         = "1405.3961",
@@ -4019,6 +4023,7 @@ author = "Matteo Cacciari and Gavin P. Salam"
       primaryClass   = "hep-ex",
       reportNumber   = "CMS-SUS-12-005, CERN-PH-EP-2014-057",
       SLACcitation   = "%%CITATION = ARXIV:1405.3961;%%",
+      note           = "submitted to PRD",
 }
 
 % --- LHC, CMS detector performance, object reconstruction ----
@@ -4747,12 +4752,23 @@ author = "Matteo Cacciari and Gavin P. Salam"
 }
 
 
-@article{CMS-PAS-MUO-10-002,
+@article{1748-0221-7-10-P10002,
       collaboration = {CMS},
       title        = {Performance of muon identification in $pp$ collisions at \mbox{$\sqrt{s} = 7\tev$}},
       journal      = {CMS Physics Analysis Summary},
       volume       = "\href{http://cdsweb.cern.ch/record/1279140}{CMS-PAS-MUO-10-002}",
       year         = {2010},
+}
+
+@article{CMS-PAS-MUO-10-002,
+  author={CMS Collaboration},
+  title={Performance of CMS muon reconstruction in $pp$ collision events at $\sqrt{s} = 7$ TeV},
+  journal={JINST},
+  volume={7},
+  pages={P10002},
+  eprint = "1206.4071",
+  doi = "10.1088/1748-0221/7/10/P10002",
+  year={2012},
 }
 
 @article{CMS-PAS-EGM-10-004,
@@ -4878,17 +4894,17 @@ author = {R.L. Gl\"uckstern}
  year          = {2005}
 }
 
-@techreport{D'Hondt:926540,
+@article{D'Hondt:926540,
       author        = "D'Hondt, Jorgen and Lowette, Steven and Buchmüller, O L
                        and Cucciarelli, Susanna and Schilling, Frank-Peter and
                        Spiropulu, Maria and Paktinat-Mehdiabadi, S and Benedetti,
                        Daniele and Pape, Luc",
       title         = "{Fitting of Event Topologies with External Kinematic
                        Constraints in CMS}",
+      journal       = "CMS Note",
       institution   = "CERN",
       address       = "Geneva",
-      number        = "CMS-NOTE-2006-023",
-      month         = "Jan",
+      volume         = "\href{http://cdsweb.cern.ch/record/926540}{CMS-NOTE-2006-023}",
       year          = "2006",
 }
 
@@ -5091,7 +5107,7 @@ author = "A. Bassetto and M. Ciafaloni and G. Marchesini"
 }
 
 @article{Beenakker:1996ed,
-      author         = "Beenakker, W. and Hopker, R. and Spira, M.",
+      author         = "Beenakker, W. and H{\"o}pker, R. and Spira, M.",
       title          = "{PROSPINO: A Program for the production of supersymmetric
                         particles in next-to-leading order QCD}",
       year           = "1996",
@@ -5100,12 +5116,12 @@ author = "A. Bassetto and M. Ciafaloni and G. Marchesini"
       primaryClass   = "hep-ph"
 }
 
-@article{Beenakker:1996ch,
-      author         = "Beenakker, W. and Hopker, R. and Spira, M. and Zerwas,
+@article{Beenakker:1996ch, 
+      author         = "Beenakker, W. and H{\"o}pker, R. and Spira, M. and Zerwas,
                         P.M.",
       title          = "{Squark and gluino production at hadron colliders}",
-      journal        = "Nucl.Phys.",
-      volume         = "B492",
+      journal        = "Nucl. Phys. B",
+      volume         = "492",
       pages          = "51-103",
       doi            = "10.1016/S0550-3213(97)80027-2",
       year           = "1997",
@@ -5125,7 +5141,6 @@ author = "A. Bassetto and M. Ciafaloni and G. Marchesini"
   pages = {111802},
   numpages = {4},
   year = {2009},
-  month = {Mar},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevLett.102.111802},
   url = {http://link.aps.org/doi/10.1103/PhysRevLett.102.111802}
@@ -5140,19 +5155,18 @@ author = "A. Bassetto and M. Ciafaloni and G. Marchesini"
   pages = {095004},
   numpages = {23},
   year = {2009},
-  month = {Nov},
   publisher = {American Physical Society},
   doi = {10.1103/PhysRevD.80.095004},
   url = {http://link.aps.org/doi/10.1103/PhysRevD.80.095004}
 }
 
 @article{Beenakker:2009ha,
-      author         = "Beenakker, Wim and Brensing, Silja and Kramer, Michael
+      author         = "Beenakker, Wim and Brensing, Silja and Kr{\"a}mer, Michael
                         and Kulesza, Anna and Laenen, Eric and others",
       title          = "{Soft-gluon resummation for squark and gluino
                         hadroproduction}",
       journal        = "JHEP",
-      volume         = "0912",
+      volume         = "12",
       pages          = "041",
       doi            = "10.1088/1126-6708/2009/12/041",
       year           = "2009",
@@ -5164,11 +5178,11 @@ author = "A. Bassetto and M. Ciafaloni and G. Marchesini"
 }
 
 @article{Beenakker:2011fu,
-      author         = "Beenakker, W. and Brensing, S. and Kramer, M.n and
+      author         = "Beenakker, W. and Brensing, S. and Kr{\"a}mer, M.n and
                         Kulesza, A. and Laenen, E. and others",
       title          = "{Squark and Gluino Hadroproduction}",
-      journal        = "Int.J.Mod.Phys.",
-      volume         = "A26",
+      journal        = "Int. J. Mod. Phys. A",
+      volume         = "26",
       pages          = "2637-2664",
       doi            = "10.1142/S0217751X11053560",
       year           = "2011",
@@ -5223,8 +5237,8 @@ author = "A. Bassetto and M. Ciafaloni and G. Marchesini"
                         and Huston, Joey and Pumplin, Jon and others",
       title          = "{Implications of CTEQ global analysis for collider
                         observables}",
-      journal        = "Phys.Rev.",
-      volume         = "D78",
+      journal        = "Phys. Rev. D",
+      volume         = "78",
       pages          = "013004",
       doi            = "10.1103/PhysRevD.78.013004",
       year           = "2008",
@@ -5342,8 +5356,8 @@ author = "S. Agostinelli and J. Allison and K. Amako and J. Apostolakis and H. A
       title          = "{Next-to-next-to-leading soft-gluon corrections for the
                         top quark cross section and transverse momentum
                         distribution}",
-      journal        = "Phys.Rev.",
-      volume         = "D82",
+      journal        = "Phys. Rev. D",
+      volume         = "82",
       pages          = "114030",
       doi            = "10.1103/PhysRevD.82.114030",
       year           = "2010",
@@ -5353,12 +5367,12 @@ author = "S. Agostinelli and J. Allison and K. Amako and J. Apostolakis and H. A
       SLACcitation   = "%%CITATION = ARXIV:1009.4935;%%",
 }
 
-@article{Melnikov:2006kv,
+@article{Melnikov:2006kv, 
       author         = "Melnikov, Kirill and Petriello, Frank",
       title          = "{Electroweak gauge boson production at hadron colliders
-                        through O(alpha(s)**2)}",
-      journal        = "Phys.Rev.",
-      volume         = "D74",
+                        through $\mathcal{O}(\alpha_s^2)$}",
+      journal        = "Phys. Rev. D",
+      volume         = "74",
       pages          = "114017",
       doi            = "10.1103/PhysRevD.74.114017",
       year           = "2006",
@@ -5384,10 +5398,9 @@ author = "S. Agostinelli and J. Allison and K. Amako and J. Apostolakis and H. A
 @article{0954-3899-28-10-313,
   author={A L Read},
   title={Presentation of search results: the $CL_{\text{s}}$ technique},
-  journal={Journal of Physics G: Nuclear and Particle Physics},
+  journal={J. Phys. G: Nucl. Part. Phys.},
   volume={28},
-  number={10},
-  pages={2693 -- 2704},
+  pages={2693--2704},
   doi={10.1088/0954-3899/28/10/313},
   url={http://stacks.iop.org/0954-3899/28/i=10/a=313},
   year={2002}
@@ -5395,10 +5408,9 @@ author = "S. Agostinelli and J. Allison and K. Amako and J. Apostolakis and H. A
 
 @article{Thomas1999435,
 title = "Confidence level computation for combining searches with small statistics",
-journal = "Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment",
+journal = "NIM A",
 volume = "434",
-number = "2-3",
-pages = "435 - 443",
+pages = "435--443",
 year = "1999",
 note = "",
 issn = "0168-9002",
@@ -5408,12 +5420,13 @@ author = "Thomas Junk",
 keywords = "Confidence level computation Poisson statistical"
 }
 
-@techreport{bib:Higgs:CLS,
-      author       = "{ATLAS Collaboration, CMS Collaboration, LHC Higgs Combination Group}",
+@article{bib:Higgs:CLS,
+      author       = "{ATLAS and CMS Collaborations, LHC Higgs Combination Group}",
       title        = "Procedure for the LHC Higgs boson search combination in Summer 2011",
+      journal      = "",
       institution  = "CERN",
       address      = "Geneva",
-      number       = "\href{http://cdsweb.cern.ch/record/1375842}{ATL-PHYS-PUB-2011-011}. \href{http://cdsweb.cern.ch/record/1379837}{CMS-NOTE-2011-005}",
+      volume       = "\href{http://cdsweb.cern.ch/record/1375842}{ATL-PHYS-PUB-2011-011}. \href{http://cdsweb.cern.ch/record/1379837}{CMS-NOTE-2011-005}",
       year         = "2011",
 }
 
@@ -5497,8 +5510,7 @@ keywords = "Confidence level computation Poisson statistical"
 
 @article{CMS-PAS-SUS-13-020,
   collaboration = {CMS},
-  title         = {Phenomenological MSSM interpretation of the CMS 7 and 8
-                  TeV results},
+  title         = {Phenomenological MSSM interpretation of the CMS 7 and 8~TeV results},
   JOURNAL      = "CMS Physics Analysis Summary",
   volume       = "\href{http://cdsweb.cern.ch/record/1693148}{CMS-PAS-SUS-13-020}",
   YEAR         = "2014"
@@ -5610,7 +5622,7 @@ archivePrefix  = "arXiv",
 @article{bib:ATLAS:PhysicsResultsSUS,
   collaboration = {ATLAS},
   title         = {ATLAS Supersymmetry (SUSY) searches},
-  journal       = {ATLAS Wiki},
+  journal       = {},
   note          = {\url{https://twiki.cern.ch/twiki/bin/view/AtlasPublic/SupersymmetryPublicResults}, Topic revision: r437},
   url           = {https://twiki.cern.ch/twiki/bin/view/AtlasPublic/SupersymmetryPublicResults},
   year          = {2014}
@@ -5620,8 +5632,8 @@ archivePrefix  = "arXiv",
       author         = "Buchmueller, O. and Cavanaugh, R. and De Roeck, A. and
                         Dolan, M.J. and Ellis, J.R. and others",
       title          = "{The CMSSM and NUHM1 after LHC Run 1}",
-      journal        = "Eur.Phys.J.",
-      volume         = "C74",
+      journal        = "Eur. Phys. J. C",
+      volume         = "74",
       pages          = "2922",
       doi            = "10.1140/epjc/s10052-014-2922-3",
       year           = "2014",
@@ -5676,7 +5688,7 @@ archivePrefix  = "arXiv",
 }
 
 
-@techreport{CERN-PH-EP-2012-173,
+@techreport{CERN-PH-EP-2012-173, 
   collaboration    = "CMS",
       title        = "Performance of CMS muon reconstruction in pp collision events at \mbox{$\sqrt{s} = 7\tev$}",
       institution  = "CERN",
@@ -5701,7 +5713,7 @@ archivePrefix  = "arXiv",
 @misc{bib:theta,
      author  = "J. Ott",
      title   = "Theta framework",
-     note    = "\url{www.theta-framework.de}",
-     year    = "Nov. 2014",
+     note    = "\url{www.theta-framework.org}",
+     year    = "Retrieved Nov. 2014",
 }
 
