--- a/Thesis.bib
+++ b/Thesis.bib
@@ -4928,7 +4928,7 @@ author = {R.L. Gl\"uckstern}
       title         = "Jet energy calibration in the 8 TeV $pp$ data",
       journal       = "CMS Physics Analysis Summary",
       volume        = "CMS-PAS-JME-13-004",
-      note          = "Paper in preparation",
+      note          = "Paper in preparation, JME-13-004",
       year          = "2014",
 }
 
